# DejaRead

./: .dockerignore  .gitignore  CHANGELOG.md  LICENSE  README.md  app.py  chromadb_viewer.py  pyproject.toml  requirements.txt
dejaread/: __init__.py  config.py
dejaread/concepts/: __init__.py  annotation_service.py  linking.py  llm.py  schemas.py
dejaread/db/: __init__.py  base.py  models.py
dejaread/embedding/: __init__.py  embedder.py  vector_store.py
dejaread/ingestion/: __init__.py  chunker.py  paddleocr.sh  parser.py  pipeline.py
dejaread/keyword/: __init__.py  store.py  tokenizer.py
dejaread/llm/: __init__.py  client.py
dejaread/memory/: __init__.py  parser.py  schemas.py  service.py
dejaread/notes/: __init__.py  parser.py  schemas.py  service.py
dejaread/qa/: __init__.py  rewriter.py  schemas.py  service.py
dejaread/retrieval/: __init__.py  hybrid.py
dejaread/utils/: utils.py
examples/: demo_3_1_3_2.py
