[project]
name = "dejaread"
version = "0.1.0"
description = "DejaRead — 具有持续记忆能力的论文知识助手"
requires-python = ">=3.10"
dependencies = [
    "sqlalchemy>=2.0",
    "pypdf>=4.0",
    "requests>=2.31",
    "pyyaml>=6.0",
    "jieba>=0.42",
]

[project.optional-dependencies]
full = [
    "chromadb",
    "openai",
    "gradio>=4.0",
]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["dejaread*"]
